data/derived/comb/progs/unify/prog4639.ml.out
Characters 70-71:
  | (r,0) -> build (r,0)
                    ^
Error: This expression has type 'a but an expression was expected of type
         'b -> 'a * int
       The type variable 'a occurs inside 'b -> 'a * int
